template/parser.automaton
State 0:
file' -> . file [ # ]
-- On CLASS shift to state 1
-- On list(clas) shift to state 167
-- On file shift to state 175
-- On clas shift to state 176
-- On OBJECT reduce production list(clas) -> 

State 1:
clas -> CLASS . IDENT loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) loption(delimited(LP,separated_list(COMMA,param),RP)) LBRA loption(separated_nonempty_list(SEMICOLON,decl)) RBRA [ OBJECT CLASS ]
clas -> CLASS . IDENT loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) loption(delimited(LP,separated_list(COMMA,param),RP)) EXTENDS typ loption(delimited(LP,separated_list(COMMA,expr),RP)) LBRA loption(separated_nonempty_list(COMMA,decl)) RBRA [ OBJECT CLASS ]
-- On IDENT shift to state 2

State 2:
clas -> CLASS IDENT . loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) loption(delimited(LP,separated_list(COMMA,param),RP)) LBRA loption(separated_nonempty_list(SEMICOLON,decl)) RBRA [ OBJECT CLASS ]
clas -> CLASS IDENT . loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) loption(delimited(LP,separated_list(COMMA,param),RP)) EXTENDS typ loption(delimited(LP,separated_list(COMMA,expr),RP)) LBRA loption(separated_nonempty_list(COMMA,decl)) RBRA [ OBJECT CLASS ]
-- On LSQ shift to state 3
-- On loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) shift to state 28
-- On LP reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> 
-- On LBRA reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> 
-- On EXTENDS reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> 

State 3:
loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> LSQ . separated_nonempty_list(COMMA,param_type_class) RSQ [ LP LBRA EXTENDS ]
-- On PLUS shift to state 4
-- On MINUS shift to state 20
-- On IDENT shift to state 5
-- On separated_nonempty_list(COMMA,param_type_class) shift to state 22
-- On param_type_class shift to state 24
-- On param_type shift to state 27

State 4:
param_type_class -> PLUS . param_type [ RSQ COMMA ]
-- On IDENT shift to state 5
-- On param_type shift to state 19

State 5:
param_type -> IDENT . [ RSQ COMMA ]
param_type -> IDENT . TYPE_LT typ [ RSQ COMMA ]
param_type -> IDENT . TYPE_BT typ [ RSQ COMMA ]
-- On TYPE_LT shift to state 6
-- On TYPE_BT shift to state 17
-- On RSQ reduce production param_type -> IDENT 
-- On COMMA reduce production param_type -> IDENT 

State 6:
param_type -> IDENT TYPE_LT . typ [ RSQ COMMA ]
-- On IDENT shift to state 7
-- On typ shift to state 16

State 7:
typ -> IDENT . args_type [ RSQ RP LP LBRA EQUAL COMMA ]
-- On LSQ shift to state 8
-- On loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) shift to state 14
-- On args_type shift to state 15
-- On RSQ reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> 
-- On RP reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> 
-- On LP reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> 
-- On LBRA reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> 
-- On EQUAL reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> 
-- On COMMA reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> 

State 8:
loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ . separated_nonempty_list(COMMA,typ) RSQ [ RSQ RP LP LBRA EQUAL COMMA ]
-- On IDENT shift to state 7
-- On typ shift to state 9
-- On separated_nonempty_list(COMMA,typ) shift to state 12

State 9:
separated_nonempty_list(COMMA,typ) -> typ . [ RSQ ]
separated_nonempty_list(COMMA,typ) -> typ . COMMA separated_nonempty_list(COMMA,typ) [ RSQ ]
-- On COMMA shift to state 10
-- On RSQ reduce production separated_nonempty_list(COMMA,typ) -> typ 

State 10:
separated_nonempty_list(COMMA,typ) -> typ COMMA . separated_nonempty_list(COMMA,typ) [ RSQ ]
-- On IDENT shift to state 7
-- On typ shift to state 9
-- On separated_nonempty_list(COMMA,typ) shift to state 11

State 11:
separated_nonempty_list(COMMA,typ) -> typ COMMA separated_nonempty_list(COMMA,typ) . [ RSQ ]
-- On RSQ reduce production separated_nonempty_list(COMMA,typ) -> typ COMMA separated_nonempty_list(COMMA,typ) 

State 12:
loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) . RSQ [ RSQ RP LP LBRA EQUAL COMMA ]
-- On RSQ shift to state 13

State 13:
loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) RSQ . [ RSQ RP LP LBRA EQUAL COMMA ]
-- On RSQ reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) RSQ 
-- On RP reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) RSQ 
-- On LP reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) RSQ 
-- On LBRA reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) RSQ 
-- On EQUAL reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) RSQ 
-- On COMMA reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> LSQ separated_nonempty_list(COMMA,typ) RSQ 

State 14:
args_type -> loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) . [ RSQ RP LP LBRA EQUAL COMMA ]
-- On RSQ reduce production args_type -> loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) 
-- On RP reduce production args_type -> loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) 
-- On LP reduce production args_type -> loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) 
-- On LBRA reduce production args_type -> loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) 
-- On EQUAL reduce production args_type -> loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) 
-- On COMMA reduce production args_type -> loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) 

State 15:
typ -> IDENT args_type . [ RSQ RP LP LBRA EQUAL COMMA ]
-- On RSQ reduce production typ -> IDENT args_type 
-- On RP reduce production typ -> IDENT args_type 
-- On LP reduce production typ -> IDENT args_type 
-- On LBRA reduce production typ -> IDENT args_type 
-- On EQUAL reduce production typ -> IDENT args_type 
-- On COMMA reduce production typ -> IDENT args_type 

State 16:
param_type -> IDENT TYPE_LT typ . [ RSQ COMMA ]
-- On RSQ reduce production param_type -> IDENT TYPE_LT typ 
-- On COMMA reduce production param_type -> IDENT TYPE_LT typ 

State 17:
param_type -> IDENT TYPE_BT . typ [ RSQ COMMA ]
-- On IDENT shift to state 7
-- On typ shift to state 18

State 18:
param_type -> IDENT TYPE_BT typ . [ RSQ COMMA ]
-- On RSQ reduce production param_type -> IDENT TYPE_BT typ 
-- On COMMA reduce production param_type -> IDENT TYPE_BT typ 

State 19:
param_type_class -> PLUS param_type . [ RSQ COMMA ]
-- On RSQ reduce production param_type_class -> PLUS param_type 
-- On COMMA reduce production param_type_class -> PLUS param_type 

State 20:
param_type_class -> MINUS . param_type [ RSQ COMMA ]
-- On IDENT shift to state 5
-- On param_type shift to state 21

State 21:
param_type_class -> MINUS param_type . [ RSQ COMMA ]
-- On RSQ reduce production param_type_class -> MINUS param_type 
-- On COMMA reduce production param_type_class -> MINUS param_type 

State 22:
loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> LSQ separated_nonempty_list(COMMA,param_type_class) . RSQ [ LP LBRA EXTENDS ]
-- On RSQ shift to state 23

State 23:
loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> LSQ separated_nonempty_list(COMMA,param_type_class) RSQ . [ LP LBRA EXTENDS ]
-- On LP reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> LSQ separated_nonempty_list(COMMA,param_type_class) RSQ 
-- On LBRA reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> LSQ separated_nonempty_list(COMMA,param_type_class) RSQ 
-- On EXTENDS reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) -> LSQ separated_nonempty_list(COMMA,param_type_class) RSQ 

State 24:
separated_nonempty_list(COMMA,param_type_class) -> param_type_class . [ RSQ ]
separated_nonempty_list(COMMA,param_type_class) -> param_type_class . COMMA separated_nonempty_list(COMMA,param_type_class) [ RSQ ]
-- On COMMA shift to state 25
-- On RSQ reduce production separated_nonempty_list(COMMA,param_type_class) -> param_type_class 

State 25:
separated_nonempty_list(COMMA,param_type_class) -> param_type_class COMMA . separated_nonempty_list(COMMA,param_type_class) [ RSQ ]
-- On PLUS shift to state 4
-- On MINUS shift to state 20
-- On IDENT shift to state 5
-- On separated_nonempty_list(COMMA,param_type_class) shift to state 26
-- On param_type_class shift to state 24
-- On param_type shift to state 27

State 26:
separated_nonempty_list(COMMA,param_type_class) -> param_type_class COMMA separated_nonempty_list(COMMA,param_type_class) . [ RSQ ]
-- On RSQ reduce production separated_nonempty_list(COMMA,param_type_class) -> param_type_class COMMA separated_nonempty_list(COMMA,param_type_class) 

State 27:
param_type_class -> param_type . [ RSQ COMMA ]
-- On RSQ reduce production param_type_class -> param_type 
-- On COMMA reduce production param_type_class -> param_type 

State 28:
clas -> CLASS IDENT loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) . loption(delimited(LP,separated_list(COMMA,param),RP)) LBRA loption(separated_nonempty_list(SEMICOLON,decl)) RBRA [ OBJECT CLASS ]
clas -> CLASS IDENT loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) . loption(delimited(LP,separated_list(COMMA,param),RP)) EXTENDS typ loption(delimited(LP,separated_list(COMMA,expr),RP)) LBRA loption(separated_nonempty_list(COMMA,decl)) RBRA [ OBJECT CLASS ]
-- On LP shift to state 29
-- On loption(delimited(LP,separated_list(COMMA,param),RP)) shift to state 39
-- On LBRA reduce production loption(delimited(LP,separated_list(COMMA,param),RP)) -> 
-- On EXTENDS reduce production loption(delimited(LP,separated_list(COMMA,param),RP)) -> 

State 29:
loption(delimited(LP,separated_list(COMMA,param),RP)) -> LP . loption(separated_nonempty_list(COMMA,param)) RP [ LBRA EXTENDS ]
-- On IDENT shift to state 30
-- On separated_nonempty_list(COMMA,param) shift to state 33
-- On param shift to state 34
-- On loption(separated_nonempty_list(COMMA,param)) shift to state 37
-- On RP reduce production loption(separated_nonempty_list(COMMA,param)) -> 

State 30:
param -> IDENT . COMMA typ [ RP COMMA ]
-- On COMMA shift to state 31

State 31:
param -> IDENT COMMA . typ [ RP COMMA ]
-- On IDENT shift to state 7
-- On typ shift to state 32

State 32:
param -> IDENT COMMA typ . [ RP COMMA ]
-- On RP reduce production param -> IDENT COMMA typ 
-- On COMMA reduce production param -> IDENT COMMA typ 

State 33:
loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param) . [ RP ]
-- On RP reduce production loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param) 

State 34:
separated_nonempty_list(COMMA,param) -> param . [ RP ]
separated_nonempty_list(COMMA,param) -> param . COMMA separated_nonempty_list(COMMA,param) [ RP ]
-- On COMMA shift to state 35
-- On RP reduce production separated_nonempty_list(COMMA,param) -> param 

State 35:
separated_nonempty_list(COMMA,param) -> param COMMA . separated_nonempty_list(COMMA,param) [ RP ]
-- On IDENT shift to state 30
-- On separated_nonempty_list(COMMA,param) shift to state 36
-- On param shift to state 34

State 36:
separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param) . [ RP ]
-- On RP reduce production separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param) 

State 37:
loption(delimited(LP,separated_list(COMMA,param),RP)) -> LP loption(separated_nonempty_list(COMMA,param)) . RP [ LBRA EXTENDS ]
-- On RP shift to state 38

State 38:
loption(delimited(LP,separated_list(COMMA,param),RP)) -> LP loption(separated_nonempty_list(COMMA,param)) RP . [ LBRA EXTENDS ]
-- On LBRA reduce production loption(delimited(LP,separated_list(COMMA,param),RP)) -> LP loption(separated_nonempty_list(COMMA,param)) RP 
-- On EXTENDS reduce production loption(delimited(LP,separated_list(COMMA,param),RP)) -> LP loption(separated_nonempty_list(COMMA,param)) RP 

State 39:
clas -> CLASS IDENT loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) loption(delimited(LP,separated_list(COMMA,param),RP)) . LBRA loption(separated_nonempty_list(SEMICOLON,decl)) RBRA [ OBJECT CLASS ]
clas -> CLASS IDENT loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) loption(delimited(LP,separated_list(COMMA,param),RP)) . EXTENDS typ loption(delimited(LP,separated_list(COMMA,expr),RP)) LBRA loption(separated_nonempty_list(COMMA,decl)) RBRA [ OBJECT CLASS ]
-- On LBRA shift to state 40
-- On EXTENDS shift to state 154

State 40:
clas -> CLASS IDENT loption(delimited(LSQ,separated_nonempty_list(COMMA,param_type_class),RSQ)) loption(delimited(LP,separated_list(COMMA,param),RP)) LBRA . loption(separated_nonempty_list(SEMICOLON,decl)) RBRA [ OBJECT CLASS ]
-- On VAR shift to state 41
-- On VAL shift to state 58
-- On OVERRIDE shift to state 125
-- On var shift to state 126
-- On separated_nonempty_list(SEMICOLON,decl) shift to state 127
-- On option(OVERRIDE) shift to state 128
-- On methode shift to state 148
-- On loption(separated_nonempty_list(SEMICOLON,decl)) shift to state 149
-- On decl shift to state 151
-- On RBRA reduce production loption(separated_nonempty_list(SEMICOLON,decl)) -> 
-- On DEF reduce production option(OVERRIDE) -> 

State 41:
var -> VAR . IDENT option(typ) EQUAL expr [ SEMICOLON RSQ RBRA COMMA ]
-- On IDENT shift to state 42

State 42:
var -> VAR IDENT . option(typ) EQUAL expr [ SEMICOLON RSQ RBRA COMMA ]
-- On IDENT shift to state 7
-- On typ shift to state 43
-- On option(typ) shift to state 44
-- On EQUAL reduce production option(typ) -> 

State 43:
option(typ) -> typ . [ EQUAL ]
-- On EQUAL reduce production option(typ) -> typ 

State 44:
var -> VAR IDENT option(typ) . EQUAL expr [ SEMICOLON RSQ RBRA COMMA ]
-- On EQUAL shift to state 45

State 45:
var -> VAR IDENT option(typ) EQUAL . expr [ SEMICOLON RSQ RBRA COMMA ]
-- On WHILE shift to state 46
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On left_value shift to state 67
-- On expr shift to state 124

State 46:
expr -> WHILE . LP expr RP expr [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On LP shift to state 47

State 47:
expr -> WHILE LP . expr RP expr [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On WHILE shift to state 46
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On left_value shift to state 67
-- On expr shift to state 121

State 48:
expr -> RETURN . [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
expr -> RETURN . expr [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On WHILE shift to state 46
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On left_value shift to state 67
-- On expr shift to state 120
-- On TIMES reduce production expr -> RETURN 
-- On SEMICOLON reduce production expr -> RETURN 
-- On RSQ reduce production expr -> RETURN 
-- On RP reduce production expr -> RETURN 
-- On RBRA reduce production expr -> RETURN 
-- On MOD reduce production expr -> RETURN 
-- On MINUS reduce production expr -> RETURN 
-- On LOG_OR reduce production expr -> RETURN 
-- On LOG_AND reduce production expr -> RETURN 
-- On ELSE reduce production expr -> RETURN 
-- On DOT reduce production expr -> RETURN 
-- On DIV reduce production expr -> RETURN 
-- On COMMA reduce production expr -> RETURN 
-- On CMP_INEG reduce production expr -> RETURN 
-- On CMP_EG reduce production expr -> RETURN 

State 49:
expr -> PRINT . LP expr RP [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On LP shift to state 50

State 50:
expr -> PRINT LP . expr RP [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On WHILE shift to state 46
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On left_value shift to state 67
-- On expr shift to state 118

State 51:
expr -> PLUS . expr [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On WHILE shift to state 46
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On left_value shift to state 67
-- On expr shift to state 117

State 52:
expr -> NEW . IDENT args_type LP loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On IDENT shift to state 53

State 53:
expr -> NEW IDENT . args_type LP loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On LSQ shift to state 8
-- On loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) shift to state 14
-- On args_type shift to state 54
-- On LP reduce production loption(delimited(LSQ,separated_nonempty_list(COMMA,typ),RSQ)) -> 

State 54:
expr -> NEW IDENT args_type . LP loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On LP shift to state 55

State 55:
expr -> NEW IDENT args_type LP . loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On WHILE shift to state 46
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On separated_nonempty_list(COMMA,expr) shift to state 92
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 115
-- On left_value shift to state 67
-- On expr shift to state 95
-- On RP reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 56:
expr -> LP . expr RP [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On WHILE shift to state 46
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On left_value shift to state 67
-- On expr shift to state 113

State 57:
expr -> LBRA . loption(separated_nonempty_list(SEMICOLON,instruction)) RBRA [ TIMES SEMICOLON RSQ RP RBRA PLUS MOD MINUS LOG_OR LOG_AND ELSE DOT DIV COMMA CMP_INEG CMP_EG ]
-- On WHILE shift to state 46
-- On VAR shift to state 41
-- On VAL shift to state 58
-- On RETURN shift to state 48
-- On PRINT shift to state 49
-- On PLUS shift to state 51
-- On NEW shift to state 52
-- On LP shift to state 56
-- On LBRA shift to state 57
-- On IF shift to state 62
-- On IDENT shift to state 64
-- On CST shift to state 65
-- On BANG shift to state 66
-- On var shift to state 105
-- On separated_nonempty_list(SEMICOLON,instruction) shift to state 106
-- On loption(separated_nonempty_list(SEMICOLON,instruction)) shift to state 107
-- On left_value shift to state 67
-- On instruction shift to state 109
-- On expr shift to state 112
-- On RBRA reduce production loption(separated_nonempty_list(SEMICOLON,instruction)) -> 
